# browser_use_webrtc

browser_use_webrtc/: .env  .gitignore  README_DOCUMENTATION_SUMMARY.md  bash.exe.stackdump  pyproject.toml
browser_use_webrtc/browser-use-docs/: API_DOCUMENTATION.md  SETUP_GUIDE.md
unified-browser-platform/: .dockerignore  .env  .env.backup  .env.example  .env.linux-cloud  .gitignore  BROWSER_SIZE_FIXES.md  CAPTURE_CONFIG_README.md  CLEANUP_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DESKTOP_CAPTURE_README.md  DOCKER_DEPLOYMENT.md  Dockerfile  SERVER_DEPLOYMENT_GUIDE.md  SINGLE_PAGE_STREAMING_CHANGES.md  STEALTH_IMPLEMENTATION.md  STREAMING_FIXES_FINAL.md  STREAMING_FIXES_SUMMARY.md  TASKBAR_CONTROL_README.md  browser-config.js  cleanup-unused-files.sh  debug-timeouts.js  deploy-server-fixes.sh  desktop-capture-config.js  docker-compose.yml  docker-hub-push.sh  env-config.js  fix-ubuntu-permissions.md  hide-taskbar.bat  hide-taskbar.ps1  ip-block-alternatives.sh  os-capture-config.js  package-lock.json  package.json  quick-setup.sh  setup-ubuntu.sh  start-desktop-capture.bat  start-linux-cloud.sh  start-server.sh  test-browser-size.js  (+8 more)
unified-browser-platform/public/: client.js  index.html  stealth-demo.html  test-full-browser.html  webrtc-streaming.html
unified-browser-platform/python-agent/: README.md  browser_use_agent.py  pyproject.toml  requirements.txt
unified-browser-platform/scripts/: check-chrome.js  find-python.js  install-chrome.js  setup-env.js  verify-chrome.js
unified-browser-platform/src/: enhanced-browser-use-setup.js  server-clean.js  server.js
unified-browser-platform/src/config/: social-media-configs.js  stability-config.js
unified-browser-platform/src/routes/: agent-routes.js  browser-routes.js  browser-use-routes.js  enhanced-browser-use-routes.js  index.js  live-browser-routes.js  session-routes.js  token-routes.js
unified-browser-platform/src/services/: SecurityService.js  advanced-stealth.js  agent-service.js  browser-streaming.js  browser-use-integration.js  centralized-browser-manager.js  enhanced-browser-use-integration.js  optimized-tab-detection.js  proxy-rotation.js  security.js  session-manager.js  social-media-configs.js  stealth-enhanced-browser-service.js
unified-browser-platform/src/utils/: logger.js  session-cleanup.js
(+17 files in other folders)
